[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uriscreen"
version = "0.1.0"
description = "screen:// URI capability pack — capture, frame, loop (mss/portal/vdisplay)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["uricore>=0.1.8"]

[project.optional-dependencies]
real = ["mss>=9.0", "Pillow>=10.0"]
dev = ["pytest>=8.0"]

[tool.uv.sources]

[tool.setuptools.packages.find]
where = ["."]
include = ["uriscreen*"]

[tool.setuptools.package-data]
uriscreen = ["manifest.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
